@@ -1,4 +1,5 @@
 1.9.0
+   - bug [12994] "PluginType kan fjernes"
    - bug [12993] "lucene-directory kan fjernes fra OpenSearch"
    - bug [12997] "tools-directory kan fjernes"
    - bug [12989] "compass-directory skal fjernes"
